[project]
name = "studi-independen-binus"
version = "0.1.0"
description = "Materi Studi Independen Binus"
authors = [
    {name = "syahrulhamdani"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jupyterlab (>=4.3.6,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
